[gd_scene load_steps=9 format=2]

[ext_resource path="res://environment/core.png" type="Texture" id=1]
[ext_resource path="res://shaders/core_glow1.shader" type="Shader" id=2]
[ext_resource path="res://environment/Core.gd" type="Script" id=3]
[ext_resource path="res://audio/fx/Explosion.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/fx/Explosionscifi.ogg" type="AudioStream" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "explode"
length = 28.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.29, -17.64, 0, -0.19, 21.96, 0.25, 0, 0, -0.2, 20.76, 0.36, -18.84, 0, -0.22, -11.64, 0.21, 21.96, 0, -0.26, -2.04, 0.25, 0, 0, -0.19, 21.96, 0.25, 0, 0, -0.2, 20.76, 0.36, -18.84, 0, -0.22, -11.64, 0.21, 21.96, 0, -0.26, -2.04, 0.25, 0, 0, -0.19, 21.96, 0.25, 0, 0, -0.2, 20.76, 0.36, -18.84, 0, -0.22, -11.64, 0.21, 21.96, 0, -0.26, -2.04, 0.25, 0, 0, -0.19, 21.96, 0.25, 0, 0, -0.2, 20.76, 0.36, -18.84, 0, -0.22, -11.64, 0.21, 21.96, 0, -0.26, -2.04, 0.25, 0, 0, -0.26, -2.04, 0.25, 0, 0, -0.19, 21.96, 0.25, 0, 0, -0.2, 20.76, 0.36, -18.84, 0, -0.22, -11.64, 0.21, 21.96, 0, -0.26, -2.04, 0.25, 0 ),
"times": PoolRealArray( 0, 1.6, 3.2, 4.9, 6.4, 7.6, 9.2, 10.9, 12.4, 13.8, 15.4, 17.1, 18.6, 20.1, 21.7, 23.4, 24.9, 26.1, 27.6, 29.2, 30.9, 32.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.6, 3.2, 4.9, 6.2, 7.6, 9.2, 10.9, 12.4, 13.8, 15.4, 17.1, 18.6, 20.1, 21.7, 23.4, 24.9, 26.1, 27.6, 29.2, 30.9, 32.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Light2D:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 34.7466, -24.724, 50, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 22.9 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 100000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 22.9 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 22.9, 28 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 22.9, 28 )
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 6.4
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.29, -17.64, 0, -0.19, 21.96, 0.25, 0, 0, -0.2, 20.76, 0.36, -18.84, 0, -0.22, -11.64, 0.21, 21.96, 0, -0.26, -2.04, 0.25, 0 ),
"times": PoolRealArray( 0, 1.6, 3.2, 4.9, 6.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, -8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.6, 3.2, 4.9, 6.4 )
}

[node name="Core" type="Node2D"]
position = Vector2( 0.416183, -0.417578 )
script = ExtResource( 3 )

[node name="AudioStreamPlayerEx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayerSciEx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="SprCore" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SprGlow" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 3 )
anims/idle = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
texture_scale = 1e-05
energy = 0.0

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
